// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<Select
  autoFocus={false}
  className="input-super-large"
  clearable={false}
  id="select-organization"
  labelKey="name"
  onChange={[MockFunction]}
  optionRenderer={[Function]}
  options={
    Array [
      Object {
        "alm": Object {
          "key": "github",
          "membersSync": false,
          "personal": false,
          "url": "https://github.com/foo",
        },
        "key": "bar",
        "name": "Bar",
      },
      Object {
        "key": "foo",
        "name": "Foo",
      },
    ]
  }
  placeholder="onboarding.import_organization.choose_organization"
  required={true}
  value="bar"
  valueKey="key"
  valueRenderer={[Function]}
/>
`;

exports[`should render options correctly 1`] = `
<div
  className="display-flex-space-between"
>
  <span
    className="text-ellipsis flex-1"
  >
    <img
      alt="SonarCloud"
      className="little-spacer-right"
      height={14}
      src="/images/sonarcloud-square-logo.svg"
    />
    Foo
    <span
      className="note little-spacer-left"
    >
      foo
    </span>
  </span>
</div>
`;

exports[`should render options correctly 2`] = `
<div
  className="display-flex-space-between"
>
  <span
    className="text-ellipsis flex-1"
  >
    <img
      alt="github"
      className="little-spacer-right"
      height={14}
      src="/images/sonarcloud/github.svg"
    />
    Bar
    <span
      className="note little-spacer-left"
    >
      bar
    </span>
  </span>
</div>
`;

exports[`should render options correctly 3`] = `
<div
  className="display-flex-space-between"
>
  <span
    className="text-ellipsis flex-1"
  >
    Foo
    <span
      className="note little-spacer-left"
    >
      foo
    </span>
  </span>
</div>
`;
